[project]
name = "srs-system-metrics"
version = "0.1.0"
description = "System to get system metrics"
authors = [
    {name = "Augusto",email = "augusto.vicente@brius.com.br"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psutil (>=6.1.1,<7.0.0)",
    "redis (>=5.2.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
